font changes done

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
     
         <div class="info">
-            <h1>Hi , I Am <span>Trupti Pawar</span></h1>
+            <h1>Hi , I am <span>Trupti Pawar</span></h1>
             <h3>(Software Developer)</h3>
             <div class="icons">
             <a href="https://www.linkedin.com/in/trupti-pawar-9a041524a"><i class="ri-linkedin-box-fill"></i></a> 
