--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <i class="ri-align-right"></i>
             <a href="#about">About</a>
             <a href="#Home">Home</a>
-            <a href="./Trupti_Pawar(resume).pdf">Resume</a>
+            <a href="./Trupti.pdf">Resume</a>
             <a href="#Projects">Projects</a>
         </nav>
     </div>
